...
"_add_"                     = "Add";
"_login_"                   = "Log in";
"_save_"                    = "Save";
"_warning_"                 = "Warning";
"_error_"                   = "Error";
...
"_beta_version_"            = "Beta version";
"_function_in_testing_"     = "Function in testing, please send information about any problems you run into.";
"_done_"                    = "Done";
"_clear_"                   = "Clear";
"_passcode_too_short_"      = "Passcode too short, at least 4 characters required";
...
"_continue_editing_"        = "Continue editing";
"_continue_request_"        = "Do you want to continue?";
"_auto_upload_folder_"      = "Auto upload";
"_gallery_"                 = "Gallery";
"_photo_"                   = "Photo";
...
"_pdf_vertical_"            = "PDF vertical display";
"_pdf_horizontal_"          = "PDF horizontal display";
"_single_file_conflict_title_" = "File conflict";
"_multi_file_conflict_title_" = "%@ File conflicts";
"_replace_action_title_" = "Replace";
"_keep_both_action_title_" = "Keep both";
"_cancel_keep_existing_action_title_" = "Cancel and keep existing";
...
"_write_file_error_"        = "Could not write the file";
"_files_lock_error_"        = "There was an error changing the lock of this file.";
"_more_"                        = "More";
"_notifications_"               = "Notifications";
"_logout_"                      = "Log out";
...
"_quota_using_percentage_"      = "Memory to %@ occupied";
"_acknowledgements_"            = "Acknowledgements";
"_settings_"                    = "Settings";
"_passcode_"                    = "Password";
"_enter_password_"              = "Enter password …";
...
"_security_"                    = "Security";
"_data_protection_"             = "Data protection";
"_privacy_settings_"            = "Privacy Settings";
"_used_opensource_software_"    = "OpenSource software used";
"_service_"                     = "Service";
"_imprint_"                     = "Imprint";
"_magentacloud_version_"        = "MagentaCLOUD Version";
"_url_"                         = "URL";
...
"_synchronizations_"            = "Synchronized folders";
"_version_server_"              = "Server version";
"_help_"                        = "Help";
"_change_simply_passcode_"      = "Change password type";
"_quota_"                       = "Quota";
...
"_disableLocalCacheAfterUpload_footer_" = "After uploading the file, do not keep it in the local cache";
"_disableLocalCacheAfterUpload_"        = "Disable local cache";
"_autoupload_"                      = "Auto upload photos/videos";
"_autoupload_select_folder_"        = "Select the \"Auto upload\" folder";
"_autoupload_error_select_folder_"  = "Select a valid folder for the \"Auto upload\"";
...
"_autoupload_create_subfolder_footer_"  = "Store photos in subfolders based on year, month or day.";
"_autoupload_subfolder_granularity_"    = "Subfolder Granularity";
"_filenamemask_"                        = "Change filename mask";
"_filenamemask_footer_"                 = "By default, when a file is uploaded, it automatically gets the following format: yy-mm-dd hh-mm-ss plus a 4-digit counter. If you do not like this format, you can change it here except for the final 4-digit counter, which cannot be omitted.";
"_autoupload_filenamemask_"         = "Change filename mask";
...
"_local_storage_"                   = "Local storage";
"_local_storage_no_record_"         = "No files yet";
"_upload_photos_videos_"            = "Upload photos or videos";
"_upload_file_"                     = "Upload file";
"_upload_file_text_"                = "Create text file";
...
"_qrcode_not_authorized_"   = "This app is not authorized to use the Back Camera.";
"_qrcode_not_supported_"    = "QR code not supported by the current device.";
"_create_voice_memo_"       = "Create voice memo";
"_voice_memo_start_"        = "Tap to start";
"_voice_memo_stop_"         = "Tap to stop";
...
// Accessibility, floating panel top element
"_cart_controller_"             = "Card controller";
"_accessibility_add_upload_"    = "Add and upload";
"_dismiss_menu_"                = "Dismiss the menu";
"_show_profile_"                = "Show profile";
...
